--- a/.github/workflows/upgrade.yml
+++ b/.github/workflows/upgrade.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         node-version: '12'
     - name: Install
-      run: npm ci
+      run: npm i
     - name: Upgrade
       run: npm run upgrade
     - name: Push
